--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -28,7 +28,7 @@
 			<!-- Search Bar -->
 			<form id="search-form">
 				<div class="input-group">
-					<input type="search" class="form-control ds-input" id="search-bar" placeholder="Search here..." aria-label="Search..." autocomplete="off" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;">
+					<input type="search" class="form-control ds-input" id="search-bar" placeholder="Search disaster" aria-label="Search..." autocomplete="off" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;">
 					<button type="submit" class="btn btn-primary" id="search-button"><i class="bi bi-search"></i></button>
 				</div>
 			</form>
@@ -153,30 +153,29 @@
 			fetch(`/Disaster?handler=Search&query=${query}`)
 				.then(response => response.json())
 				.then(data => {
-					// Clear existing table rows
 					const tableBody = document.querySelector("table tbody");
 					tableBody.innerHTML = "";
 					let counter = 1;
 					data.forEach(result => {
 						const newRow = `<tr data-id="${result.disasterID}" class="data-row clickable-row">
-										<td width="5%">${counter}</td>
-										<td width="20%">${result.disasterName}</td>
-										<td width="10%">${result.disasterType}</td>
-										<td width="25%">${result.description}</td>
-										<td width="15%">${result.dateOccured}</td>
-										<td width="20%">
-											<!-- Edit button -->
-											<a class="btn btn-success edit-button" href="/Disaster/EditDisaster?disasterID=${result.disasterID}">
-												<i class="bi bi-pencil-fill"></i>
-											</a>
+											<td width="5%">${counter}</td>
+											<td width="20%">${result.disasterName}</td>
+											<td width="10%">${result.disasterType}</td>
+											<td width="25%">${result.description}</td>
+											<td width="15%">${result.dateOccured}</td>
+											<td width="20%">
+												<!-- Edit button -->
+												<a class="btn btn-success edit-button" href="/Disaster/EditDisaster?disasterID=${result.disasterID}">
+													<i class="bi bi-pencil-fill"></i>
+												</a>
 
-											<!-- Delete button -->
-											<a href="#" class="btn btn-danger edit-button" onclick="prepareDelete('${result.disasterID}')"
-												data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
-												<i class="bi bi-trash-fill"></i>
-											</a>
-										</td>
-									</tr>`;
+												<!-- Delete button -->
+												<a href="#" class="btn btn-danger edit-button" onclick="prepareDelete('${result.disasterID}')"
+													data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
+													<i class="bi bi-trash-fill"></i>
+												</a>
+											</td>
+										</tr>`;
 						tableBody.innerHTML += newRow;
 						counter++;
 					});
@@ -192,19 +191,20 @@
 <!-- Clickable Row for Disaster Profile -->
 <script>
 	document.addEventListener("DOMContentLoaded", function () {
-		const rows = document.querySelectorAll(".data-row");
+		const table = document.getElementById('disaster-table');
 
-		rows.forEach(function (row) {
-			row.addEventListener("click", function () {
-				const disasterId = this.getAttribute("data-id");
+		table.addEventListener('click', function (event) {
+			const clickedRow = event.target.closest('.data-row');
+
+			if (clickedRow) {
+				const disasterId = clickedRow.getAttribute("data-id");
 				if (disasterId) {
 					window.location.href = `/Disaster/DisasterProfile?disasterID=${disasterId}`;
 				}
-			});
+			}
 		});
 	});
 </script>
-
 
 <!-- Confirm Delete button in Modal -->
 <script>
