--- a/Pages/Family/AddFamily.cshtml
+++ b/Pages/Family/AddFamily.cshtml
@@ -180,7 +180,7 @@
 	</div>
 </div>
 
-<scrip>
+<script>
 	const mobileInput = document.getElementById('mobileNum');
 	const telephoneInput = document.getElementById('telephoneNum');
 
@@ -229,4 +229,4 @@
 
 	// Add an event listener for the input event on form elements
 	form.addEventListener('input', checkFormValidity);
-</scrip>
+</script>
