--- a/Pages/Disaster/AllocateEC.cshtml
+++ b/Pages/Disaster/AllocateEC.cshtml
@@ -99,11 +99,12 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                Are you sure you want to save the selection?
+                <p>Are you sure you want to allocate the following evacuation centers?</p>
+                <strong class="text-danger">This cannot be undone.</strong>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" id="confirmSaveButton">Save Selection</button>
+                <button type="button" class="btn btn-primary" id="confirmSaveButton">Save Selection</button>
             </div>
         </div>
     </div>
