--- a/Pages/Disaster/StaffAssignment.cshtml
+++ b/Pages/Disaster/StaffAssignment.cshtml
@@ -15,9 +15,14 @@
 	</form>
 
 	<div class="row">
-		<div class="title col d-flex align-items-center">
-			<h1 class="me-3">Typhoon Pedro</h1>
-			<span class="badge bg-success d-none d-sm-block">Active</span>
+		<ul class="breadcrumbs">
+			<li><a href="#">Disaster</a></li>
+			<li class="divider">/</li>
+			<li><a href="#" class="active">Typhoon Pedro</a></li>
+		</ul>
+
+		<div class="col d-flex align-items-center">
+			<h1>Staff Assignment</h1>
 		</div>
 
 		<div class="col-auto d-flex justify-content-between align-items-center">
