Editing the options in Entry Log

--- a/Pages/Disaster/EntryLog.cshtml
+++ b/Pages/Disaster/EntryLog.cshtml
@@ -29,9 +29,13 @@
 			<h1>Entry Log</h1>
 		</div>
 
-		<div class="col-auto d-flex justify-content-between align-items-center">
-			<a class="btn btn-primary mb-2" href="/Disaster/AddEntryLog">
-				<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Entry Log
+		<div class="col-auto d-flex justify-content-between align-items-center" style="gap: 5px">
+			<a class="btn btn-primary mb-2" href="/Disaster/CheckInEvacuee">
+				<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Check In Evacuee
+			</a>
+
+			<a class="btn btn-primary mb-2" href="/Disaster/CheckInEvacuee">
+				<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Check Out Evacuee
 			</a>
 		</div>
 	</div>
