--- a/Pages/Disaster/CheckInEvacuee.cshtml
+++ b/Pages/Disaster/CheckInEvacuee.cshtml
@@ -1,8 +1,8 @@
 ﻿@page
 @model AgapayAidSystem.Pages.Disaster.AddEntryLogModel
 @{
+    ViewData["Title"] = "Check In Evacuee";
 }
-
 
 <div class="container p-2 form-container">
 
