--- a/Pages/Disaster/EntryLog.cshtml
+++ b/Pages/Disaster/EntryLog.cshtml
@@ -1,12 +1,9 @@
 ﻿@page
 @model AgapayAidSystem.Pages.Disaster.Entry_LogModel
 @{
+	ViewData["Title"] = "Entry Log";
 	Layout = "_DisasterProfile";
 }
-
-<style>
-
-</style>
 
 <div class="container p-2">
 
@@ -34,9 +31,8 @@
 				<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Check In Evacuee
 			</a>
 
-			<a class="btn btn-primary mb-2" href="/Disaster/CheckInEvacuee">
-				<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Check Out Evacuee
-			</a>
+			<button type="button" class="btn btn-primary mb-2" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>
+				Check Out Evacuees</button>
 		</div>
 	</div>
 
@@ -44,6 +40,7 @@
 		<table class="table align-middle table-hover" style="width:100%">
 			<thead>
 				<tr>
+					<th>     </th>
 					<th>ID</th>
 					<th>Name</th>
 					<th>Check-in Date</th>
@@ -54,6 +51,12 @@
 			</thead>
 			<tbody>
 				<tr class="data-row clickable-row">
+					<td>
+						<div class="form-check">
+							<input class="form-check-input" type="checkbox">
+							<label class="form-check-label"></label>
+						</div>
+					</td>
 					<td width="15%">EVC0000001</td>
 					<td width="30%">Juanito Santos</td>
 					<td width="15%">08/21/2023</td>
@@ -67,13 +70,32 @@
 								<i class="bi bi-three-dots-vertical"></i>
 							</a>
 							<ul class="dropdown-menu" aria-labelledby="recordOptions">
-								<li><a class="dropdown-item" href="#">Edit</a></li>
-								<li><a class="dropdown-item" href="#" onclick="confirmDelete();">Delete</a></li>
+								<li><a class="dropdown-item" href="#">View Family Profile</a></li>
+								<li><a class="dropdown-item" href="#" onclick="confirmDelete();">Delete Entry Log</a></li>
 							</ul>
 						</div>
 					</td>
 				</tr>
 			</tbody>
 		</table>
+	</div>
+</div>
+
+<!-- Modal: Confirm Delete -->
+<div class="modal" id="deleteConfirmationModal" tabindex="-1">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Confirm Delete</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				Are you sure you want to delete this entry log?
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+				<button type="button" class="btn btn-danger" id="confirmDeleteButton">Delete</button>
+			</div>
+		</div>
 	</div>
 </div>
