--- a/Pages/Disaster/StaffAssignment.cshtml
+++ b/Pages/Disaster/StaffAssignment.cshtml
@@ -2,6 +2,7 @@
 @model AgapayAidSystem.Pages.Disaster.StaffAssignmentModel
 @{
 	Layout = "_DisasterProfile";
+	ViewData["Title"] = "Staff Assignment";
 }
 
 <div class="container p-2">
@@ -57,7 +58,7 @@
 								<i class="bi bi-three-dots-vertical"></i>
 							</a>
 							<ul class="dropdown-menu" aria-labelledby="recordOptions">
-								<li><a class="dropdown-item" href="#">Edit</a></li>
+								<li><a class="dropdown-item" href="#">View Staff Profile</a></li>
 								<li><a class="dropdown-item" href="#" onclick="confirmDelete();">Delete</a></li>
 							</ul>
 						</div>
@@ -65,5 +66,24 @@
 				</tr>
 			</tbody>
 		</table>
+	</div>
+</div>
+
+<!-- Modal: Confirm Delete -->
+<div class="modal" id="deleteConfirmationModal" tabindex="-1">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Confirm Delete</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				Are you sure you want to delete this staff assignment record?
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+				<button type="button" class="btn btn-danger" id="confirmDeleteButton">Delete</button>
+			</div>
+		</div>
 	</div>
 </div>
