--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -244,3 +244,14 @@ body {
     background-color: var(--bs-primary-color);
 }
 
+/* Apply styles to the active link in the sidebar */
+#sidebar .nav-link.active {
+    font-weight: bold;
+    color: var(--bs-primary-color);
+}
+
+/* Add hover effect to the links */
+#sidebar .nav-link:hover {
+    font-weight: bold;
+    color: var(--bs-primary-color); /* Change the color on hover */
+}
