--- a/Pages/Family/AddFamilyHead.cshtml
+++ b/Pages/Family/AddFamilyHead.cshtml
@@ -46,8 +46,8 @@
 				<div class="row">
 					<p class="text-danger text-end">* Required field</p>
 				</div>
-				<div class="row">
-					@*<!-- Family ID-->
+				@*<div class="row">
+					<!-- Family ID-->
 					<div class="col-md-3">
 					<div class="mb-3">
 					<label class="form-label">
@@ -78,17 +78,8 @@
 					</label>
 					<input type="text" class="form-control" name="serialNum" value="@Model.familyInfo.serialNum" required maxlength="85" />
 					</div>
-					</div>*@
-
-					<!-- Relationship -->
-					<div class="col-md-3">
-						<div class="mb-3">
-							<label class="form-label">
-								Relationship:
-							</label>
-						</div>
 					</div>
-				</div>
+				</div>*@
 
 				<div class="row">
 					<!-- First Name -->
