--- a/Pages/Family/EditFamily.cshtml
+++ b/Pages/Family/EditFamily.cshtml
@@ -162,9 +162,10 @@
                 </div>
 
                 <div class="row mt-3">
-                    <div class="col text-center">
+                    <div class="col">
+                        <!-- Use the d-flex and flex-column classes for vertical stacking on smaller screens -->
                         <div class="d-flex flex-column justify-content-center flex-md-row">
-                            <!-- Add buttons for additional functionality -->
+                            <button type="button" class="btn btn-primary mx-3 my-2" onclick="window.location.href='/Family/AddFamilyMember'">Add Family Member</button>
                         </div>
                     </div>
                 </div>
