Moved DisasterProfile to Profile/Index

--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -198,7 +198,7 @@
 			if (clickedRow) {
 				const disasterId = clickedRow.getAttribute("data-id");
 				if (disasterId) {
-					window.location.href = `/Disaster/DisasterProfile?disasterID=${disasterId}`;
+					window.location.href = `/Disaster/Profile/Index?disasterID=${disasterId}`;
 				}
 			}
 		});
