--- a/Pages/Disaster/Profile/Index.cshtml
+++ b/Pages/Disaster/Profile/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model AgapayAidSystem.Pages.Disaster.DisasterProfileModel
+@model AgapayAidSystem.Pages.Disaster.Profile.IndexModel
 @{
     ViewData["Title"] = "Disaster Profile";
 }
