Removed old pages, Added new pages to Disaster/Profile folder

--- a/Pages/Disaster/Profile/AllocateEC.cshtml
+++ b/Pages/Disaster/Profile/AllocateEC.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model AgapayAidSystem.Pages.Disaster.AllocateECModel
+@model AgapayAidSystem.Pages.Disaster.Profile.AllocateECModel
 @{
 	ViewData["Title"] = "Allocate Evacuation Center";
 }
@@ -75,7 +75,7 @@
 
                     <!-- Cancel and Save Selection Button -->
                     <div class="button-spacer">
-                        <a class="btn btn-outline-secondary mr-10" href="/Disaster/DisasterProfile?disasterID=@Model.disasterInfo.disasterID">Cancel</a>
+                        <a class="btn btn-outline-secondary mr-10" href="/Disaster/Profile/Index?disasterID=@Model.disasterInfo.disasterID">Cancel</a>
                         <button type="button" class="btn btn-primary" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>Save Selection</button>
                     </div>
                 </div>
