--- a/Pages/Disaster/Profile/AssignStaff.cshtml
+++ b/Pages/Disaster/Profile/AssignStaff.cshtml
@@ -1,10 +1,9 @@
 ﻿@page
-@model AgapayAidSystem.Pages.Disaster.AssignStaffModel
+@model AgapayAidSystem.Pages.Disaster.Profile.AssignStaffModel
 @{
 	ViewData["Title"] = "Assign Staff";
 	Layout = "_DisasterProfile";
 }
-
 
 <div class="container p-2 form-container">
 
