--- a/Pages/Disaster/Profile/CheckInEvacuee.cshtml
+++ b/Pages/Disaster/Profile/CheckInEvacuee.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model AgapayAidSystem.Pages.Disaster.AddEntryLogModel
+@model AgapayAidSystem.Pages.Disaster.Profile.CheckInEvacueeModel
 @{
-    ViewData["Title"] = "Check In Evacuee";
+	ViewData["Title"] = "Check In Evacuee";
 }
 
 <div class="container p-2 form-container">
