--- a/Pages/Disaster/Profile/StaffAssignment.cshtml
+++ b/Pages/Disaster/Profile/StaffAssignment.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model AgapayAidSystem.Pages.Disaster.StaffAssignmentModel
+@model AgapayAidSystem.Pages.Disaster.Profile.StaffAssignmentModel
 @{
 	Layout = "_DisasterProfile";
 	ViewData["Title"] = "Staff Assignment";
