Minor change in href

--- a/Pages/Disaster/Profile/Index.cshtml
+++ b/Pages/Disaster/Profile/Index.cshtml
@@ -104,7 +104,7 @@
         <h1>Evacuation Center Log</h1>
 
         <div class="d-flex justify-content-end align-items-center">
-            <a class="btn btn-primary mb-2" href="/Disaster/AllocateEC?disasterID=@Model.disasterInfo.disasterID">
+            <a class="btn btn-primary mb-2" href="/Disaster/Profile/AllocateEC?disasterID=@Model.disasterInfo.disasterID">
                 <i class="bi bi-building-add"></i>Allocate Evacuation Center
             </a>
         </div>
